<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pastel_gradient"
    android:paddingHorizontal="10dp"
    android:paddingVertical="50dp"
    tools:context="es.unex.giss.asee.ghiblitrunk.view.JoinActivity">

    <TextView
        android:id="@+id/tv_joinTitle"
        android:layout_width="309dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/createaccount_string"
        android:textAlignment="viewStart"
        android:textColor="#E23155"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="start"
        android:hint="First Name"
        android:textAlignment="viewStart"
        tools:textColorHint="#333333"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/last_name_join"
        android:textAlignment="viewStart"
        tools:textColorHint="#333333"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_firstname"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="start"
        android:hint="User"
        android:textAlignment="viewStart"
        tools:textColorHint="#333333"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="@+id/et_firstname"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="#000000"
        android:gravity="start"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        tools:textColorHint="#333333"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="@+id/et_firstname"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="start"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        tools:textColorHint="#333333"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_repeatpassword"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="start"
        android:hint="Repeat Password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        tools:textColorHint="#333333"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/et_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:buttonTint="#7C7C7C"
        android:text="I agree terms and conditions"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="@+id/et_repeatpassword"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_sign"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginTop="74dp"
        android:backgroundTint="#FFB6C1"
        android:text="@string/sign_up_join"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_conditions"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>