<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pastel_gradient"
    android:paddingHorizontal="10dp"
    android:paddingVertical="100dp"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_circle"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        android:textSize="35dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:id="@+id/tv_app_title"
        android:paddingVertical="10dp"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:autofillHints="username"
        android:backgroundTint="#000000"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="start"
        android:hint="@string/user_string"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_title" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:backgroundTint="#000000"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="start"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:ignore="MissingConstraints"
        tools:textColorHint="#808080" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFB6C1"
        android:textColor="#2A2929"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/tv_login"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_join"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/registrarse_string"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        tools:ignore="TextViewEdits"/>

    <TextView
        android:id="@+id/bt_passwordForget"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/password_forget"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_join"
        tools:ignore="TextViewEdits"/>

</androidx.constraintlayout.widget.ConstraintLayout>